// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GasWidget Opens gas menu upon click and "rapid" is selected properly 1`] = `
<div
  class="MuiPopover-root-59"
  id="menu-"
  role="presentation"
  style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
>
  <div
    aria-hidden="true"
    style="z-index: -1; position: fixed; right: 0px; bottom: 0px; top: 0px; left: 0px; background-color: transparent;"
  />
  <div
    data-test="sentinelStart"
    tabindex="0"
  />
  <div
    class="MuiPaper-root-65 MuiMenu-paper-57 MuiPopover-paper-60 MuiPaper-elevation8-76 MuiPaper-rounded-66"
    style="opacity: 1; transform: scale(1, 1); min-width: 0; transition: opacity 0ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,transform 0ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; top: 16px; left: 16px; transform-origin: -16px -16px;"
    tabindex="-1"
  >
    <ul
      class="MuiList-root-93 MuiMenu-list-58 MuiList-padding-94"
      role="listbox"
      tabindex="-1"
    >
      <li
        aria-disabled="false"
        class="MuiButtonBase-root-112 MuiListItem-root-101 MuiMenuItem-root-97 MuiMenuItem-gutters-98 MuiListItem-gutters-108 MuiListItem-button-109"
        data-value="rapid"
        role="option"
        tabindex="-1"
      >
        122
        <span
          class="MuiTouchRipple-root-115"
        />
      </li>
      <li
        aria-disabled="false"
        aria-selected="true"
        class="MuiButtonBase-root-112 MuiListItem-root-101 MuiMenuItem-root-97 MuiMenuItem-selected-99 MuiMenuItem-gutters-98 MuiListItem-gutters-108 MuiListItem-button-109 MuiListItem-selected-111 MuiButtonBase-focusVisible-114 MuiListItem-focusVisible-103"
        data-value="standard"
        role="option"
        tabindex="0"
      >
        75
        <span
          class="MuiTouchRipple-root-115"
        />
      </li>
      <li
        aria-disabled="false"
        class="MuiButtonBase-root-112 MuiListItem-root-101 MuiMenuItem-root-97 MuiMenuItem-gutters-98 MuiListItem-gutters-108 MuiListItem-button-109"
        data-value="slow"
        role="option"
        tabindex="-1"
      >
        51
        <span
          class="MuiTouchRipple-root-115"
        />
      </li>
    </ul>
  </div>
  <div
    data-test="sentinelEnd"
    tabindex="0"
  />
</div>
`;

exports[`GasWidget Opens gas menu upon click and "rapid" is selected properly 2`] = `
<div>
  <div
    class="MuiInputBase-root-30 MuiOutlinedInput-root-15 MuiInputBase-colorSecondary-39 MuiOutlinedInput-colorSecondary-16 makeStyles-gasSelector-1 MuiInputBase-focused-32 MuiOutlinedInput-focused-17 MuiInputBase-adornedStart-34 MuiOutlinedInput-adornedStart-19"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root-48 makeStyles-gasIcon-2"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M19.77 7.23l.01-.01-3.72-3.72L15 4.56l2.11 2.11c-.94.36-1.61 1.26-1.61 2.33 0 1.38 1.12 2.5 2.5 2.5.36 0 .69-.08 1-.21v7.21c0 .55-.45 1-1 1s-1-.45-1-1V14c0-1.1-.9-2-2-2h-1V5c0-1.1-.9-2-2-2H6c-1.1 0-2 .9-2 2v16h10v-7.5h1.5v5c0 1.38 1.12 2.5 2.5 2.5s2.5-1.12 2.5-2.5V9c0-.69-.28-1.32-.73-1.77zM12 10H6V5h6v5zm6 0c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1z"
      />
    </svg>
    <div
      aria-haspopup="listbox"
      class="MuiSelect-root-4 MuiSelect-select-5 MuiSelect-selectMenu-8 MuiSelect-outlined-7 MuiInputBase-input-41 MuiOutlinedInput-input-25 MuiInputBase-inputAdornedStart-45 MuiOutlinedInput-inputAdornedStart-28"
      role="button"
      tabindex="0"
    >
      122
    </div>
    <input
      aria-hidden="true"
      class="MuiSelect-nativeInput-14"
      tabindex="-1"
      value="rapid"
    />
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root-48 MuiSelect-icon-10 MuiSelect-iconOutlined-13"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M7 10l5 5 5-5z"
      />
    </svg>
    <fieldset
      aria-hidden="true"
      class="PrivateNotchedOutline-root-61 MuiOutlinedInput-notchedOutline-24"
      style="padding-left: 8px;"
    >
      <legend
        class="PrivateNotchedOutline-legend-62"
        style="width: 0.01px;"
      >
        <span>
          ​
        </span>
      </legend>
    </fieldset>
  </div>
</div>
`;

exports[`GasWidget Renders correctly 1`] = `
<div>
  <div
    class="MuiInputBase-root-30 MuiOutlinedInput-root-15 MuiInputBase-colorSecondary-39 MuiOutlinedInput-colorSecondary-16 makeStyles-gasSelector-1 MuiInputBase-adornedStart-34 MuiOutlinedInput-adornedStart-19"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root-48 makeStyles-gasIcon-2"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M19.77 7.23l.01-.01-3.72-3.72L15 4.56l2.11 2.11c-.94.36-1.61 1.26-1.61 2.33 0 1.38 1.12 2.5 2.5 2.5.36 0 .69-.08 1-.21v7.21c0 .55-.45 1-1 1s-1-.45-1-1V14c0-1.1-.9-2-2-2h-1V5c0-1.1-.9-2-2-2H6c-1.1 0-2 .9-2 2v16h10v-7.5h1.5v5c0 1.38 1.12 2.5 2.5 2.5s2.5-1.12 2.5-2.5V9c0-.69-.28-1.32-.73-1.77zM12 10H6V5h6v5zm6 0c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1z"
      />
    </svg>
    <div
      aria-haspopup="listbox"
      class="MuiSelect-root-4 MuiSelect-select-5 MuiSelect-selectMenu-8 MuiSelect-outlined-7 MuiInputBase-input-41 MuiOutlinedInput-input-25 MuiInputBase-inputAdornedStart-45 MuiOutlinedInput-inputAdornedStart-28"
      role="button"
      tabindex="0"
    >
      75
    </div>
    <input
      aria-hidden="true"
      class="MuiSelect-nativeInput-14"
      tabindex="-1"
      value="standard"
    />
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root-48 MuiSelect-icon-10 MuiSelect-iconOutlined-13"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M7 10l5 5 5-5z"
      />
    </svg>
    <fieldset
      aria-hidden="true"
      class="PrivateNotchedOutline-root-61 MuiOutlinedInput-notchedOutline-24"
      style="padding-left: 8px;"
    >
      <legend
        class="PrivateNotchedOutline-legend-62"
        style="width: 0.01px;"
      >
        <span>
          ​
        </span>
      </legend>
    </fieldset>
  </div>
</div>
`;
